# flutter_and_images_crossover_methods

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/krzysztof/nyczka/opencv_binding/: OpencvBindingPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/krzysztof/nyczka/opencv_binding_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: cameraView.dart  main.dart  opencv.dart  opencv2.dart  opencvNativeLogic.dart  opencvNativeView.dart  opencvPackageLogic.dart  opencvPackageView.dart  opencv_package.dart  opencv_package_set_state.dart  process_frame.dart  routeGenerator.dart  tensorflowForFlutter.dart  tensorflowForFlutterLogic.dart  tensorflowForFlutterView.dart
ios/: .gitignore  opencv_binding.podspec
ios/Classes/: OpencvBindingPlugin.h  OpencvBindingPlugin.m  SwiftOpencvBindingPlugin.swift  basic.cpp  basic.h
lib/: opencvBinding.dart  opencv_binding.dart
